--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-node_modules/
-.expo/
-npm-debug.*
+# OSX
+#
+.DS_Store
+
 # Xcode
-!**/*.xcodeproj
-!**/*.pbxproj
-!**/*.xcworkspacedata
-!**/*.xcsettings
-!**/*.xcscheme
+#
+build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -23,45 +21,33 @@ DerivedData
 *.ipa
 *.xcuserstate
 project.xcworkspace
-
-# Gradle
-/build/
-/RNTester/android/app/build/
-/RNTester/android/app/gradle/
-/RNTester/android/app/gradlew
-/RNTester/android/app/gradlew.bat
-/ReactAndroid/build/
-
-# Buck
-.buckd
-buck-out
-/ReactAndroid/src/main/jni/prebuilt/lib/armeabi-v7a/
-/ReactAndroid/src/main/jni/prebuilt/lib/x86/
-/ReactAndroid/src/main/gen
-
-# Android
+Pods/
+# Android/IntelliJ
+#
+build/
 .idea
 .gradle
 local.properties
 *.iml
-/android/
 
-# iOS
-/ios/Pods/
-/ios/build/
+# node.js
+#
+node_modules/
+npm-debug.log
+yarn-error.log
 
-# Node
-node_modules
-*.log
-.nvm
-/danger/node_modules/
+# BUCK
+buck-out/
+\.buckd/
+*.keystore
 
-# OS X
-.DS_Store
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/
 
-# Test generated files
-/ReactAndroid/src/androidTest/assets/AndroidTestBundle.js
-*.js.meta
-
-/coverage
-/third-party
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
