--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,12 +1,9 @@
-# Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '9.0'
 
 target 'demo' do
-  # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-  # use_frameworks!
+  use_frameworks!
 
-  # Pods for demo
-pod 'VWO', '~>2.0.1'
+pod 'VWO'
 
 end
 
