--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
+    "react-native-navbar": "^2.1.0",
     "react-native-side-menu": "^1.1.3",
     "vwo-react-native": "git+https://github.com/wingify/vwo-react-native.git"
   }
