--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "react-native": "^0.49.5",
     "react-native-navbar": "^2.1.0",
     "react-native-side-menu": "^1.1.3",
-    "vwo-react-native": "git+https://github.com/wingify/vwo-react-native.git"
+    "vwo-react-native": "^2.2.1"
   }
 }
