--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "react": "16.0.0-beta.5",
-    "react-native": "^0.49.5",
+    "react": "16.0.0",
+    "react-native": "0.57.0",
     "react-native-navbar": "^2.1.0",
     "react-native-side-menu": "^1.1.3",
     "vwo-react-native": "^2.2.1"
