--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,3 @@
-rootProject.name = 'demo'
-include ':vwo-react-native'
-project(':vwo-react-native').projectDir = new File(rootProject.projectDir, '../node_modules/vwo-react-native/android')
-
+rootProject.name = 'Testing'
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
