--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "demo",
+  "name": "Testing",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "babel-preset-react-native-stage-0": "^1.0.1",
-    "jest-expo": "^22.0.0",
-    "react-test-renderer": "16.0.0-beta.5"
-  },
   "scripts": {
-    "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.0.0",
-    "react-native": "0.57.0",
+    "react": "17.0.1",
+    "react-native": "0.64.2",
     "react-native-navbar": "^2.1.0",
     "react-native-side-menu": "^1.1.3",
-    "vwo-react-native": "^2.2.1"
+    "vwo-react-native": "^2.2.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@babel/runtime": "^7.14.8",
+    "@react-native-community/eslint-config": "^3.0.0",
+    "babel-jest": "^27.0.6",
+    "eslint": "^7.31.0",
+    "jest": "^27.0.6",
+    "metro-react-native-babel-preset": "^0.66.2",
+    "react-test-renderer": "17.0.1",
+    "babel-preset-react-native-stage-0": "^1.0.1"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
